--- a/composer.json
+++ b/composer.json
@@ -46,7 +46,8 @@
     "roots/wp-config": "1.0.0",
     "roots/wp-password-bcrypt": "1.0.0",
     "wpackagist-plugin/advanced-custom-fields": "5.8.2",
-    "wpackagist-plugin/disable-gutenberg": "1.8.1"
+    "wpackagist-plugin/disable-gutenberg": "1.8.1",
+    "wpackagist-plugin/relevanssi": "4.3.1"
   },
   "require-dev": {
     "squizlabs/php_codesniffer": "^3.4.2",
