--- a/composer.json
+++ b/composer.json
@@ -42,13 +42,12 @@
     "composer/installers": "^1.4",
     "vlucas/phpdotenv": "^3.4.0",
     "oscarotero/env": "^1.2.0",
-    "roots/wordpress": "5.2.2",
+    "roots/wordpress": "5.*",
     "roots/wp-config": "1.0.0",
     "roots/wp-password-bcrypt": "1.0.0",
-    "wpackagist-plugin/advanced-custom-fields": "5.8.2",
-    "wpackagist-plugin/disable-gutenberg": "1.8.1",
-    "wpackagist-plugin/relevanssi": "4.3.1",
-    "wpackagist-plugin/polylang":"2.6.9"
+    "wpackagist-plugin/advanced-custom-fields": "5.*",
+    "wpackagist-plugin/disable-gutenberg": "2.*",
+    "wpackagist-plugin/relevanssi": "4.*"
   },
   "require-dev": {
     "squizlabs/php_codesniffer": "^3.4.2",
