--- a/composer.json
+++ b/composer.json
@@ -46,7 +46,8 @@
     "roots/wp-config": "1.0.0",
     "roots/wp-password-bcrypt": "1.0.0",
     "wpackagist-plugin/advanced-custom-fields": "5.*",
-    "wpackagist-plugin/relevanssi": "4.*"
+    "wpackagist-plugin/relevanssi": "4.*",
+    "wpackagist-plugin/wp-ulike":"4.*"
   },
   "require-dev": {
     "squizlabs/php_codesniffer": "^3.4.2",
