--- a/composer.json
+++ b/composer.json
@@ -47,7 +47,8 @@
     "roots/wp-password-bcrypt": "1.0.0",
     "wpackagist-plugin/advanced-custom-fields": "5.*",
     "wpackagist-plugin/relevanssi": "4.*",
-    "wpackagist-plugin/wp-ulike":"4.*"
+    "wpackagist-plugin/wp-ulike":"4.*",
+    "wpackagist-plugin/theme-translation-for-polylang":"3.*"
   },
   "require-dev": {
     "squizlabs/php_codesniffer": "^3.4.2",
