--- a/composer.json
+++ b/composer.json
@@ -39,12 +39,12 @@
   ],
   "require": {
     "php": ">=7.1",
-    "composer/installers": "^1.4",
-    "vlucas/phpdotenv": "^3.4.0",
-    "oscarotero/env": "^1.2.0",
+    "composer/installers": "1.*",
+    "vlucas/phpdotenv": "3.*",
+    "oscarotero/env": "1.*",
     "roots/wordpress": "5.*",
-    "roots/wp-config": "1.0.0",
-    "roots/wp-password-bcrypt": "1.0.0",
+    "roots/wp-config": "1.*",
+    "roots/wp-password-bcrypt": "1.*",
     "wpackagist-plugin/advanced-custom-fields": "5.*",
     "wpackagist-plugin/relevanssi": "4.*",
     "wpackagist-plugin/wp-ulike":"4.*",
