--- a/composer.json
+++ b/composer.json
@@ -48,7 +48,8 @@
     "wpackagist-plugin/advanced-custom-fields": "5.*",
     "wpackagist-plugin/relevanssi": "4.*",
     "wpackagist-plugin/wp-ulike":"4.*",
-    "wpackagist-plugin/theme-translation-for-polylang":"3.*"
+    "wpackagist-plugin/theme-translation-for-polylang":"3.*",
+    "wpackagist-plugin/webp-express":"0.19.0"
   },
   "require-dev": {
     "squizlabs/php_codesniffer": "^3.4.2",
