--- a/composer.json
+++ b/composer.json
@@ -49,7 +49,8 @@
     "wpackagist-plugin/relevanssi": "4.*",
     "wpackagist-plugin/wp-ulike":"4.*",
     "wpackagist-plugin/theme-translation-for-polylang":"3.*",
-    "wpackagist-plugin/webp-express":"0.19.0"
+    "wpackagist-plugin/webp-express":"0.19.0",
+    "wpackagist-plugin/koko-analytics":"1.0.22"
   },
   "require-dev": {
     "squizlabs/php_codesniffer": "^3.4.2",
