Add facebook OG plugin

--- a/composer.json
+++ b/composer.json
@@ -49,8 +49,9 @@
     "wpackagist-plugin/relevanssi": "4.*",
     "wpackagist-plugin/wp-ulike":"4.*",
     "wpackagist-plugin/theme-translation-for-polylang":"3.*",
-    "wpackagist-plugin/webp-express":"0.19.0",
-    "wpackagist-plugin/koko-analytics":"1.0.22"
+    "wpackagist-plugin/webp-express":"0.*",
+    "wpackagist-plugin/koko-analytics":"1.*",
+    "wpackagist-plugin/for-facebook-opengraph-refresher":"1.*"
   },
   "require-dev": {
     "squizlabs/php_codesniffer": "^3.4.2",
